Bug 40816: (follow-up) Standardize sort icon alignment
DataTables wants to change the alignment of the sorting icons when it
detects the column contents as numeric or date. This patch overrides
that.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
@@ -169,10 +169,24 @@ table {
             td {
                 padding: .5em;
             }
+
             tr.dtrg-group {
                 td {
                     background: #e0e0e0;
                 }
+            }
+        }
+
+        th.dt-type-numeric,
+        th.dt-type-date,
+        td.dt-type-numeric,
+        td.dt-type-date {
+            div.dt-column-header {
+                flex-direction: row;
+            }
+
+            div.dt-column-footer {
+                flex-direction: row;
             }
         }
     }
